--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -6,28 +6,47 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
 body {
-	background: #f7fbfb;
+	background: linear-gradient(45deg, #ffa775, tan, #ffa775);
 	color: #182020;
+	font-family: 'Roboto', sans-serif;
+	height: 100vh;
 }
-
 
 /*
 	Main Header
 */
 
 .mainHeader {
+	width: 100%;
 	padding: 0 50px;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	background-color: #d7d0c8;
+	box-shadow: 0px 3px 3px 0px #f7b267;
+}
+
+.mainHeader h1 {
+	font-family: 'Bevan', cursive;
+	text-shadow: 1px 1px #FF7526;
+	font-size: 3rem;
+	border-bottom: 3px solid black;
 }
 
 .headerNav a {
 	margin: 0 10px;
 	text-decoration: none;
-	color: black;
+	color: #f7f7f7;
 	font-weight: bold;
-	background-color: #ff0;
+	background-color: #000;
+	padding: 15px;
+	border:2px solid tan;
+	border-radius: 15px;
+}
+
+.headerNav a:hover {
+	color: #FFA775;
+	border: 2px solid #ffa775;
 }
 
 /*
@@ -40,9 +59,13 @@ body {
 	top: 0;
 	bottom: 0;
 	left: -250px;
-	background: #7fb5d7;
+	background: #f3e9dc;
 	transition: all 0.5s ease;
 	padding: 0 15px;
+}
+
+.sidebar h3, .sidebar textarea {
+	font-weight: bold;
 }
 
 .sidebar.show {
@@ -58,9 +81,20 @@ body {
 	border-bottom: 2px solid #517288;
 }
 
+.sidebar input[type=submit], .sidebar label {
+	font-family: 'Roboto', sans-serif;
+	// color: #FFA775;
+	color: orange;
+	font-size: 1.2rem; 
+	font-weight: bold;
+}
+
+
 .sidebar input[type=submit] {
 	border: 2px solid #517288;
-	color: #2f424e;
+	border-radius: 25px;
+	padding: 5px 10px;
+	background-color: black;
 }
 
 .fa-times {
@@ -76,20 +110,32 @@ body {
 .notes {
 	padding: 0 50px;
 	display: flex;
+	justify-content: space-around;
 	flex-wrap: wrap;
+	opacity: 1;
 }
 
 .noteCard {
-	flex: 1 0 200px;
-	background: white;
-	box-shadow: 3px 2px 3px rgba(0,0,0,0.1);
-	margin: 15px;
+	flex: 1 0 15vw;
+	background: #d7d0c8;
+	box-shadow: 3px 2px 3px rgba(0,0,0,0.2);
+	margin: 20px 15px;
 	padding: 10px;
 	position: relative;
+	transition: all 0.7s;
+	border-radius: 10px;
+}
+
+.noteCard:hover {
+	color: #f7f7f7;
+	background-color: rgba(0,0,0,0.7);
+	transform: translateY(-5px);
+
+
 }
 
 .noteCard h4 {
-	margin-top: 0;
+	margin-top: 5px;
 	position: relative;
 }
 
@@ -114,52 +160,117 @@ body {
 
 .noteCard input[type=submit] {
 	width: auto;
-	border: 2px solid #182020;
-	color: #182020;
+	border: 2px solid #FFA775;
+	border-radius: 10px; 
+	padding: 5px;
+	color: #f7f7f7;
 	background: transparent;
+	font-size: 1.2rem;
+	z-index: 999;
 }
 
 /*
 	Modals
 */
 
-.modal,
-.overlay {
-	visibility: hidden;
-	opacity: 0;
-	transition: all 0.3s ease;
+// .modal,
+// .overlay {
+// 	visibility: hidden;
+// 	opacity: 0;
+// 	transition: all 0.3s ease;
+// 	position: absolute;
+// }
+
+// .modal.show,
+// .overlay.show {
+// 	visibility: visible;
+// 	opacity: 1;
+// }
+
+// .modal {
+// 	width: 400px;
+// 	background: white;
+// 	border: 10px solid rgba(255,255,255,0.5);
+// 	top: 50%;
+// 	left: 50%;
+// 	transform: translate(-50%,-50%);
+// }
+
+// .modal div {
+// 	margin: 15px;
+// 	display: flex;
+// }
+// .modal label {
+// 	margin-right: 10px;
+// }
+
+// .overlay {
+// 	top: 0;
+// 	left: 0;
+// 	height: 100%;
+// 	width: 100%;
+// 	background: rgba(0,0,0,0.4);
+// }
+
+.is-expanded {
 	position: absolute;
+	width: 80vw;
+	min-height: 50vh;
+	top: 35vh;
+	z-index: 99;
 }
 
-.modal.show,
-.overlay.show {
-	visibility: visible;
-	opacity: 1;
+@media (max-width: 1400px) {
+	.noteCard {
+		flex: 1 0 30%;
+	}
 }
 
-.modal {
-	width: 400px;
-	background: white;
-	border: 10px solid rgba(255,255,255,0.5);
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%,-50%);
-}
+@media (max-width: 600px) {
+	.mainHeader {
+		flex-flow: column nowrap;
+		justify-content: center;
+		border-bottom: none;
+		min-height: 20vh;
+		
+		h1 {
+			margin-top: 5px;
+			margin-bottom: 10px;
+		}
 
-.modal div {
-	margin: 15px;
-	display: flex;
-}
-.modal label {
-	margin-right: 10px;
-}
+		.headerNav a {
+			padding: 8px;
+			position: relative;
+			bottom: -8px;
+		}
+	
+	}
+	
+	.notes {
+		flex-flow: column nowrap;
+	}
 
-.overlay {
-	top: 0;
-	left: 0;
-	height: 100%;
-	width: 100%;
-	background: rgba(0,0,0,0.4);
+	.noteCard {
+		flex: 1 0 80%;
+	}
+
+	.sidebar {
+		width: 100%;
+		height: 85vh;
+		top: 15vh;
+		bottom: 0;
+		left: -500px;
+	
+		h3 {
+			text-align: center;
+		}
+		
+		textarea {
+			height: 30vh;
+			
+		}
+	}
+
 }
 
 
