--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -62,6 +62,10 @@ body {
 	background: #f3e9dc;
 	transition: all 0.5s ease;
 	padding: 0 15px;
+	
+	.sidebar form {
+		margin-top: 25vh;
+	}
 }
 
 .sidebar h3, .sidebar textarea {
@@ -131,7 +135,6 @@ body {
 	background-color: rgba(0,0,0,0.7);
 	transform: translateY(-5px);
 
-
 }
 
 .noteCard h4 {
@@ -169,49 +172,6 @@ body {
 	z-index: 999;
 }
 
-/*
-	Modals
-*/
-
-// .modal,
-// .overlay {
-// 	visibility: hidden;
-// 	opacity: 0;
-// 	transition: all 0.3s ease;
-// 	position: absolute;
-// }
-
-// .modal.show,
-// .overlay.show {
-// 	visibility: visible;
-// 	opacity: 1;
-// }
-
-// .modal {
-// 	width: 400px;
-// 	background: white;
-// 	border: 10px solid rgba(255,255,255,0.5);
-// 	top: 50%;
-// 	left: 50%;
-// 	transform: translate(-50%,-50%);
-// }
-
-// .modal div {
-// 	margin: 15px;
-// 	display: flex;
-// }
-// .modal label {
-// 	margin-right: 10px;
-// }
-
-// .overlay {
-// 	top: 0;
-// 	left: 0;
-// 	height: 100%;
-// 	width: 100%;
-// 	background: rgba(0,0,0,0.4);
-// }
-
 .is-expanded {
 	position: absolute;
 	width: 80vw;
@@ -231,7 +191,7 @@ body {
 		flex-flow: column nowrap;
 		justify-content: center;
 		border-bottom: none;
-		min-height: 20vh;
+		min-height: 15vh;
 		
 		h1 {
 			margin-top: 5px;
@@ -254,12 +214,19 @@ body {
 		flex: 1 0 80%;
 	}
 
+	.noteCard:hover {
+	color: #f7f7f7;
+	background-color: rgba(0,0,0,0.9);
+	transform: translateY(0px);
+
+}
+
 	.sidebar {
 		width: 100%;
 		height: 85vh;
 		top: 15vh;
 		bottom: 0;
-		left: -500px;
+		left: -700px;
 	
 		h3 {
 			text-align: center;
